# junk

./: .gitignore  .gitmodules  TODO  xml.rb
CppUTest/examples/: Makefile
Doxygen_test/ruby-1.9.3-p125/: Doxyfile
OpenMP/: helloOpenMP.c
ProgrammingPearls/section1/: num_list.txt  p4.rb
Pthreads/: multiThread_openMP.c  multiThread_pthread.c  singleThread.c
The_Programming_Language_Ruby/: thread_sample1.rb  thread_sample2.rb
ansible/: TODO  ansible.cfg  hosts  web-notls.yml
ansible/files/: nginx.conf
ansible/templates/: index.html.j2
antlr/sample1/: .gitignore  Expr.g4  makefile
c/: behavior  behavior.c  makefile  signal.c
c++/design_pattern/: Adapter.cpp  ChainOfResponsibility.cpp  Composite.cpp  Decorator.cpp  Facade.cpp  Interpreter.cpp  Observer.cpp  Prototype.cpp  Proxy.cpp  (+5 more)
c++/std/: CMakeLists.txt  thread.cpp
c++/std/thread_c++11/: CMakeLists.txt
ex/: README
gdb/: .gitignore  main.c  makefile
go/: cat  cat.8  file.8  file.go  helloworld3  helloworld3.8  helloworld3.go
loader/: hello.elf  loader  loader.c  makefile  readelf.py
make/: library1.c  library1.h  main  main.c  makefile
opt/: Jamfile.jam  _Jamroot.jam
python/: 7seg.c  7seg_tk.py  7seg_tk2.py  TODO  hello_tk.py  mycat.py  mycat_test.py  test_mycat.py
pytorch/: quickstart.py
sh/: junk-test.sh  junk.sh
sphinx/: Makefile  aaa.rst  bbb.rst  conf.py  index.rst  ja.json  make.bat
spin/: helloworld.prom  lockfree-queue.prom
svn/: sample.xml  xml.rb
tags/: main.cpp  tags
test/: Testing.mm  test.asta
tool/: ping_all.sh  remove_pngmetatext.py  rename_to_seqnum.py
(+262 files in other folders)
